Changelog
=========


1.7.5 (unreleased)
------------------

- Nothing changed yet.


1.7.4 (2016-03-30)
------------------

- Fix setting values for dexterity-readonly fields.
  [elioschmutz]

- Fix encoding problem when creating AT blobs. [jone]


1.7.3 (2015-12-11)
------------------

- UserBuilder: add method to create a user within specified groups.
  [deiferni]


1.7.2 (2015-09-30)
------------------

- DX-Builder: Initialize attributes only with set_field_values.
  No longer pass all arguments to createContent to avoid setting fields that
  are stored in annotations as attributes as well.
  [deiferni]


1.7.1 (2015-08-20)
------------------

- Add conditional import for Relationvalues since we don't always have z3c.relation.
  [tschanzt]


1.7.0 (2015-08-20)
------------------

- Automatically create relation-values from plone content-types while setting field-values.
  [deiferni]

- Add support for building portlets.
  [mbaechtold]


1.6.3 (2015-05-28)
------------------

- Genericsetup builder: fix error when creating same folder multiple times.
  [jone]


1.6.2 (2015-05-20)
------------------

- Package builder: make package version configurable.
  [jone]


1.6.1 (2015-05-20)
------------------

- Package builder: update pkg_resources working set when loading package.
  [jone]

- Add creation date setter to builder.
  [mbaechtold]


1.6.0 (2014-12-31)
------------------

- Add more default builders:

  - a "zcml" builder for creating ZCML files
  - a "python package" builder for creating python package on the file system
  - a "namespace package" builder, used internally by the "python package" builder
  - a "subpackage" builder for extending a python package with nested packages
  - a "genericsetup profile" builder
  - a "plone upgrade step" builder for building Generic Setup upgrade steps

  [jone]


1.5.2 (2014-12-06)
------------------

- File builder: fix default filename encoding for AT.